> Increased size of return ladybug button
> Click-Drag from the center dot in Remote Control creates a vector
> Fixed: Manually moving the ladybug out of the frame, then clicking on return ladybug causes her to run offscreen again; her motion and position should be cleared on reset.
> Improved layout of time control panel
> Sim pauses when selecting playback mode, rather than automatically playing when you click the radio button.

# 1.20.28 (28207) Feb 6, 2009
> Fixed: Remote control arrow node captures mouse input
> Fixed: Switching to manual mode doesn't work after timeline is full.
> Fixed: remote control does not work if you click inside of the arrow (you have to click outside of the arrow, or very near the tip it seems).
> Fixed: "Throwable" box should be labeled "Frictionless".
> Fixed: Reset All does not return "Throwable" to default (off) state.
> Fixed: "Throwable" checkbox should be moved to right above remote control.
> Fixed: "Reset All" should be centered in the bottom of control panel.
> Fixed: Changed "Recording" to "Record" in mode indicator

# 1.20.27 (28186) Feb 5, 2009
> Rewind works when in playback mode.
> If you select "Playback" radio button it rewinds and puts you in playback mode.
> Fixed: If you move the bug and then hit "reset all", when you move the bug again it goes to its start position, but jumps
> Put the remote and the controls for remote on a raised section of control panel, so that it is clear that these controls go with remote, and to separate it (somewhat) from other controls.
> Trace label and controls moved left to align with other controls in control panel.
> Removed clear button by trace
> Added clear button by recording controls
> Blue timeline color matches the trace color
> Timeline blue line thinner so that it looks more like "inside" the timeline