@@ -118,6 +118,7 @@ class RemoteControl(model: LadybugModel, setMotionManual: () => Unit) extends Ve
             override def mousePressed(event: PInputEvent) = {
                 if (isInteractive()) {
                     _mode.dragging = true
+                    model.setPenDown(true)
                     setMotionManual()
                     _mode.setDestination(_mode.transform.viewToModel(event.getCanvasPosition.getX, event.getCanvasPosition.getY))
                 }
@@ -130,6 +131,7 @@ class RemoteControl(model: LadybugModel, setMotionManual: () => Unit) extends Ve
                     if (!LadybugDefaults.vaSticky && (_mode == velocityMode || _mode == accelerationMode)) {
                         _mode.setDestination(new Vector2D(0, 0))
                     }
+                    model.setPenDown(false)
                 }
 
             }
